# clipboard-task

./: CMakeLists.txt  README.md
src/: clipboard_interface.h  clipboard_qt.cxx  clipboard_qt.h  clipboard_x11.cxx  clipboard_x11.h  clipboard_xcb.cxx  clipboard_xcb.h  main.cxx
